--- a/BegginerProjects/UpgradePassword/.gitignore
+++ b/BegginerProjects/UpgradePassword/.gitignore
@@ -7,7 +7,7 @@ __pycache__/
 
 
 # Ignore specific files or directories
-# Replace 'filename'  to ignore
+# Replace 'filename'  to ignorej
 
 # Ignore all files in a specific directory
 # Replace 'directory_name/' to ignore
